# fpdb-cuda

./: .clang-format  .gitignore  CMakeLists.txt  README.md  check.cu  float_error.c  test.c  testThreadPool.cpp  timing.c
include/: bits_array.hpp  compressedFile.hpp  cuda_utils.hpp  err_io.h  groups.h  shuffle.h  thread_pool.hpp  timing.h
old/: bits_array.cu  main-old.cu  threading.c  threading.h
src/: compressedFile.cpp  groups.cu  main.cu  shuffle.cu  thread_pool.cpp
timing/: timing.c
verify/: FreeplayExplorer.py  cleanedFreeplayGroups2.json  computeCheck.py  main.py  readDatabase.py  testBudget.cu
